# letras3d

./: Cargo.toml  README.html  README.md
src/: application.rs  constants.rs  main.rs  object.rs  orthographic_view.rs  orthographic_view.wgsl  orthographic_view_side.wgsl  orthographic_view_top.wgsl  perspective_view.rs  perspective_view.wgsl  texture.rs  types.rs
src/symbols/: i.rs  l.rs  mod.rs  u.rs  z.rs
